--- a/NHR2015/NHR2014/index.htm
+++ b/NHR2015/NHR2014/index.htm
@@ -2,14 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-
 <title>Norman Hecht Research, Inc.</title>
 <link href="NHRhome.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<div class="head"><img src=""logos/nhrhome.gif">
+<div class="head"><img src=""Logos/NHRhome.gif">
 <h3>we make an uncompromising commitment to excellence</h3>
 </div>
 
