--- a/NHR2015/srhome.html
+++ b/NHR2015/srhome.html
@@ -5,6 +5,6 @@
 <title>clear</title>
 </head>
 
-<body style="background-color:#666; height:800px">
+<body style="background-color:#666">
 </body>
 </html>
