--- a/NHR2015/index1.htm
+++ b/NHR2015/index1.htm
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Norman Hecht Research, Inc.</title>
-<link href="bootstrap.css" rel="stylesheet" type="text/css">
+<link href="NHR2015\bootstrap.css" rel="stylesheet" type="text/css">
 
 
 </head>
