--- a/NHR2015/index.htm
+++ b/NHR2015/index.htm
@@ -22,15 +22,15 @@
 		</button>
 	
 		<div class="navbar-header">
-		<a href="normanhechtresearch.com"><img class="navbar-brand" src="Logos/nav.gif"></a>
+		<a href="index.htm"><img class="navbar-brand" src="Logos/nav.gif"></a>
 		</div>
 	
 	<div class="collapse navbar-collapse" id="defaultNavbar1">
 		<ul class="nav navbar-nav pull-right">
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About Us</a></li>
-			<li><a href="#">Senior Executives</a></li>
-			<li><a href="#">Contact Us</a></li>
+			<li><a href="index.htm">Home</a></li>
+			<li><a href="NHRabout.html">About Us</a></li>
+			<li><a href="NHRsenior.html">Senior Executives</a></li>
+			<li><a href="NHRcontact.html">Contact Us</a></li>
 			
 		</ul>
 	</div>
@@ -53,9 +53,9 @@
 <footer class="footer">
 	<div class="pull-left">
 	<td>
-	<a href="normanhechtresearch.com"><img src="Logos/nav.gif" width="200" style="vertical-align:middle; margin-right:auto; margin-left:auto"></a></td>
+	<a href="index.htm"><img src="Logos/nav.gif" width="200" style="vertical-align:middle; margin-right:auto; margin-left:auto"></a></td>
 	<td style="text-align:center">
-	<a href="normanhechtresearch.com">Home</a> || <a href="NHRabout.html">About Us</a> || <a href="NHRsenior.html">Senior Executives</a> || <a href="NHRcontact.html">Contact Us</a>
+	<a href="index.htm">Home</a> || <a href="NHRabout.html">About Us</a> || <a href="NHRsenior.html">Senior Executives</a> || <a href="NHRcontact.html">Contact Us</a>
 	</td>
 	</div>
 	<div class="pull-right">
