--- a/NHR2015/index1.htm
+++ b/NHR2015/index1.htm
@@ -22,15 +22,15 @@
 		</button>
 	
 		<div class="navbar-header">
-		<a href="normanhechtresearch.com"><img class="navbar-brand" src="Logos/nav.gif"></a>
+		<a href="NHR2015/index.htm"><img class="navbar-brand" src="NHR2015/Logos/nav.gif"></a>
 		</div>
 	
 	<div class="collapse navbar-collapse" id="defaultNavbar1">
 		<ul class="nav navbar-nav pull-right">
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About Us</a></li>
-			<li><a href="#">Senior Executives</a></li>
-			<li><a href="#">Contact Us</a></li>
+			<li><a href="NHR2015/index.htm">Home</a></li>
+			<li><a href="NHR2015/NHRAbout.html">About Us</a></li>
+			<li><a href="NHR2015/NHRsenior.html">Senior Executives</a></li>
+			<li><a href="NHR2015/NHRcontact.html">Contact Us</a></li>
 			
 		</ul>
 	</div>
@@ -38,14 +38,14 @@
 </nav>
 
 <div class="">
-	<img style="border-radius:15px; border:solid 2px #939391; display:block; margin-left:auto; margin-right:auto" width="50%" src="Logos/NHRhome.gif">
+	<img style="border-radius:15px; border:solid 2px #939391; display:block; margin-left:auto; margin-right:auto" width="50%" src="NHR2015/Logos/NHRhome.gif">
 	
 	<div style="margin-top:05px; color:#333b59; font-size:22px; font-weight:bold; font-family:'PT Sans'; font-variant:small-caps; font-style:italic; text-align:center"> WE MAKE AN UNCOMPROMISING COMMITMENT TO EXCELLENCE.</div>
 
 </div>
 
 <div class="container" style="display:block">
-<img src="NHR2014/compassrealhome_(3).gif" width="90%" style="display:block; margin-left:auto; margin-right:auto;margin-bottom:10px">
+<img src="NHR2015/NHR2014/compassrealhome_(3).gif" width="90%" style="display:block; margin-left:auto; margin-right:auto;margin-bottom:10px">
 </div>
 
 
@@ -53,9 +53,9 @@
 <footer class="footer">
 	<div class="pull-left">
 	<td>
-	<a href="normanhechtresearch.com"><img src="Logos/nav.gif" width="200" style="vertical-align:middle; margin-right:auto; margin-left:auto"></a></td>
+	<a href="NHR2015/index.htm"><img src="NHR2015/Logos/nav.gif" width="200" style="vertical-align:middle; margin-right:auto; margin-left:auto"></a></td>
 	<td style="text-align:center">
-	<a href="normanhechtresearch.com">Home</a> || <a href="NHRabout.html">About Us</a> || <a href="NHRsenior.html">Senior Executives</a> || <a href="NHRcontact.html">Contact Us</a>
+	<a href="NHR2015/index.htm">Home</a> || <a href="NHR2015/NHRabout.html">About Us</a> || <a href="NHRsenior.html">Senior Executives</a> || <a href="NHR2015/NHRcontact.html">Contact Us</a>
 	</td>
 	</div>
 	<div class="pull-right">
